# anidb

./: .env.example  .gitignore  ANIDB_High_Level_Design.docx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_QUESTIONS.md  README.md  RESEARCH_PAPER_BRIEF.md  SECURITY.md  dev.sh  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: package-lock.json  package.json
api/src/: index.ts
api/src/middleware/: error-handler.ts  validation.ts
api/src/routes/intent-read/: handler.ts
api/src/routes/intent-write/: handler.ts
api/src/routes/subscriptions/: handler.ts
api/src/sdk/: index.ts
api/tests/: health.test.ts
core/: Cargo.toml
core/confidence-store/: Cargo.toml
core/confidence-store/migrations/: 20260303000001_create_facts_table.sql
core/confidence-store/src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
core/event-log/: Cargo.toml
core/event-log/src/: client.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
core/knowledge-graph/: Cargo.toml
core/knowledge-graph/src/: client.rs  lib.rs  queries.rs  schema.rs  sync.rs
core/ontology/: Cargo.toml
core/ontology/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
core/ontology/src/archetypes/: mod.rs
core/ontology/src/archetypes/saas/: archetype.rs  mod.rs
core/ontology/src/primitives/: mod.rs  rea_model.rs
core/semantic-engine/: Cargo.toml
core/semantic-engine/context-bundler/: Cargo.toml
core/semantic-engine/context-bundler/src/: bundler.rs  lib.rs  prompts.rs  types.rs
core/semantic-engine/intent-parser/: Cargo.toml
core/semantic-engine/intent-parser/src/: lib.rs  parser.rs  prompts.rs  types.rs
core/semantic-engine/query-planner/: Cargo.toml
core/semantic-engine/query-planner/src/: lib.rs  planner.rs  types.rs
core/semantic-engine/src/: anthropic.rs  clients.rs  config.rs  error.rs  handlers.rs  lib.rs  llm.rs  main.rs  openai.rs  pipeline.rs  state.rs
core/semantic-engine/write-resolver/: Cargo.toml
core/semantic-engine/write-resolver/src/: lib.rs  resolver.rs  types.rs
core/shared-types/: Cargo.toml
core/shared-types/src/: confidence.rs  events.rs  fact.rs  intent.rs  lib.rs  ontology.rs  saas_events.rs
core/subscription-engine/: Cargo.toml
core/subscription-engine/src/: lib.rs  main.rs
experiments/: pyproject.toml  requirements.txt
experiments/anidb-agent/: run.py
experiments/baseline-agent/: run.py
experiments/construction-estimation/anidb-agent/: run.py
experiments/construction-estimation/baseline-agent/: run.py
experiments/construction-estimation/evaluation/: compare.py
experiments/construction-estimation/synthetic-data/: generate.py
experiments/construction-estimation/tests/: conftest.py  test_generate.py  test_scoring.py
experiments/evaluation/: compare.py
experiments/synthetic-data/: generate.py
experiments/tests/: conftest.py  test_generate.py  test_scoring.py
infra/neo4j/: neo4j.conf
infra/postgres/: init.sql
infra/redis/: redis.conf
