[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anidb-experiments"
version = "0.1.0"
description = "ANIDB research experiments: synthetic data, agents, and evaluation"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "faker>=33.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["synthetic_data*", "baseline_agent*", "anidb_agent*", "evaluation*"]

[tool.setuptools.package-dir]
synthetic_data = "synthetic-data"
baseline_agent = "baseline-agent"
anidb_agent = "anidb-agent"

[tool.ruff]
target-version = "py311"
line-length = 100
