[package]
name = "anidb-confidence-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anidb-confidence-store"
path = "src/main.rs"

[dependencies]
anidb-shared-types = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
