[package]
name = "anidb-knowledge-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anidb-shared-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
neo4rs = { workspace = true }
