[package]
name = "anidb-intent-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anidb-shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
