[package]
name = "anidb-write-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anidb-shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
